--- a/google_homepage/css/style.css
+++ b/google_homepage/css/style.css
@@ -1,10 +1,41 @@
-.header {
-  list-style-type: none;
-  margin: 10px;
-  overflow: hidden;
-  margin-right: 16px;
+body{
+  font-size: 14px;
   font-family: arial,sans-serif;
-  font-size: 13px;
+  color: #222;
+}
+nav{
+  align-items: center;
+  margin: 0;
+  padding:0;
+  width: 100%;
+  height: 60px;
+  box-sizing: border-box;
+  
+}
+.pic{
+  padding-right:6px ;
+  -webkit-background-size: 32px 32px;
+  background-size: 32px 32px;
+  border: 0;
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+  display: block;
+  margin: 0;
+  position: relative;
+  height: 32px;
+  width: 32px;
+  z-index: 0;
+}
+.header {
+  float: right;
+  display: flex;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  margin-right: 6px;
+  font-family: arial,sans-serif;
+  font-size: 12px;
 }
 
 .headerli a {
@@ -29,11 +60,13 @@
   display: flex;
   border: 1px solid #dfe1e5;
   box-shadow: none;
+  border-radius: 24px;
   z-index: 3;
   height: 44px;
   margin: 0 auto;
-  margin-top: -77px;
-  width: 582px;
+  width: 482px;
+  width: auto;width: auto;
+  max-width: 584px;
 }
 
 .search-area:hover {
@@ -66,6 +99,7 @@ box-shadow: 0 2px 3px 0 rgba(0,0,0,0.24), 0 2px 5px 0 rgba(0,0,0,0.19);
 }
 
 .input-enter {
+  align-items:center ;
   display: flex;
   flex: 1;
   flex-wrap: wrap;
@@ -73,35 +107,34 @@ box-shadow: 0 2px 3px 0 rgba(0,0,0,0.24), 0 2px 5px 0 rgba(0,0,0,0.19);
 
 .input-area {
   color: transparent;
-  flex: 100%;
-  white-space: pre;
-  font: 16px arial, sans-serif;
-  line-height: 34px;
-  height: 34px !important;
-  display: block;
+    flex: 100%;
+    white-space: pre;
+    height: 34px;
 }
 
 .input {
+  background-color: transparent;
+  border: none;
   margin: 0;
-  padding: 0;
-  color: rgba(0, 0, 0, 0.87);
+  padding: 2.rem;
+  color: rgba(0,0,0,.87);
   word-wrap: break-word;
   outline: none;
   display: flex;
   flex: 100%;
-  margin-top: -68px;
-  font: 16px arial, sans-serif;
-  line-height: 34px;
-  height: 34px !important;
-  text-rendering: auto;
-  letter-spacing: normal;
-  word-spacing: normal;
-  text-transform: none;
-  text-indent: 0px;
-  text-shadow: none;
-  text-align: start;
-  appearance: textfield;
-  cursor: text;
+  -webkit-tap-highlight-color: transparent;
+  margin-top: -37px;
+  height: 34px;
+  font-size: 16px;
+  font: 400 13.3333px Arial;
+  
+}
+
+.harfCevirme{
+  background: url(//www.gstatic.com/inputtools/images/tia.png) no-repeat center;
+    height: 24px;
+    width: 24px;
+    vertical-align: middle;
 }
 
 .googlesearch {
